--- a/app/views/partials/_intranet.html.erb
+++ b/app/views/partials/_intranet.html.erb
@@ -19,7 +19,10 @@
 				<p style="text-align: center;">Sí eres nuevo en la red</p>
 				<%= link_to "Registrate aquí", new_registration_path(resource_name),:class=>"btn btn-lg btn-block", :id=>"styleSession" %>
 	    	</div>
-		</div>	
+		</div>
+		<div class="panel-footer">
+			<p style="text-align:center;"><b>Miembros activos:</b>  <%= User.count%></p>
+		</div>		
 	</div>
 </div>
 
