--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -59,8 +59,8 @@
 					<%= link_to 'Ofertas <i class="glyphicon glyphicon-log-out"></i>'.html_safe, offerings_path %>
 				</li>
 
-				<li role="presentation" class="<%= 'active' if current_page?(services_path) %>">
-					<%= link_to 'Servicios <i class="glyphicon glyphicon-new-window"></i>'.html_safe, services_path %>
+				<li role="presentation" class="<%= 'active' if current_page?(services_index_activos_path) %>">
+					<%= link_to 'Servicios <i class="glyphicon glyphicon-new-window"></i>'.html_safe, services_index_activos_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(experiences_path) %>">
