--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,49 +1,33 @@
-<h1>Servicios Activos: <button type="button" class="btn btn-default btnWhite" id:"btnService" data-trigger="focus" data-container="body" data-toggle="btnService"> ? </button></h1>
+<h1>Solicitudes de participación</h1>
 
-<div class="buscador">
-	<%= form_tag(services_searchService_path, :method => "post",:class=>"form-inline") do %>
-	<div class="input-group">
-		<%= text_field_tag :search, params[:search], placeholder: "Buscar servicios",:class => 'form-control',:required=>true %>
-		<span class="input-group-btn">
-			<%= button_tag(type: "submit", class: "btn btn-default ") do %>
-				<i class="glyphicon glyphicon-search"></i>
-			<% end %>
-		</span>
+<div class="panel panel-default panelRease">
+	<div class="panel-heading">
+		Solicitudes para participar en <%=@publication.title%>
 	</div>
-	<%end%>
+	<div class="panel-body">
+		<%if @pendientes.present?%>
+			<h2>Pendientes: </h2>
+			<% @pendientes.each do |servicio| %>
+				<p>
+				<%if servicio.creator.photo.present?%>
+					<%=link_to image_tag(servicio.creator.photo.url(:mini)), servicio.creator%>
+				<%else%>
+					<%=link_to image_tag("mini/missingPhoto.png"), servicio.creator%>
+				<%end%>
+				<%=link_to servicio.creator.nickname, servicio.creator%> realizó una petición: <i>"<%= servicio.message.truncate(50)%>"</i> - <%= link_to "responder", servicio %> </p>
+			<%end%>
+		<%end%>
+		<%if @rechazados.present?%>
+			<h2>Rechazadas: </h2>
+			<% @rechazados.each do |servicio| %>
+				<p>
+				<%if servicio.creator.photo.present?%>
+					<%=link_to image_tag(servicio.creator.photo.url(:mini)), servicio.creator%>
+				<%else%>
+					<%=link_to image_tag("mini/missingPhoto.png"), servicio.creator%>
+				<%end%>
+				<%=link_to servicio.creator.nickname, servicio.creator%> realizó una petición: <i>"<%= servicio.message.truncate(50)%>"</i> - <%= link_to "responder", servicio %> </p>
+			<%end%>
+		<%end%>		
+	</div>
 </div>
-
-<%if @activos.present?%>
-	<% @activos.each do |activo| %>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				<%=activo.title%>
-			</div>
-			<div class="panel-body">
-				<h2>Resumen:</h2>
-				<p><%=activo.resume%></p>
-				<%= link_to "Ver servicio",activo, :class =>'btn btnCRUD'%>
-			</div>
-		</div>
-	<%end%>
-<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Servicios Activos
-			</div>
-			<div class="panel-body">
-				<p>No hay servicios activos disponibles</p>
-			</div>
-		</div>
-<%end%>
-<script type="text/javascript">
-	$(function () {
-		$('[data-toggle="btnService"]').popover(
-			{
-				title: 'Servicios activos',
-				html: 'true', 
-				content: '<p><strong>Servicios activos:</strong> Son solicitudes u ofertas de servicio que ya han sido concretadas y tienen un profesor y un socio comunitario comprometidos en la realización de dicha actividad AS.</strong></p>'
-			}
-		)
-	})
-</script>
