--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,7 +1,7 @@
 <%if @service.status==1 or @service.status == 3%>
 	<h1>Aceptar Servicio</h1>
 	<%= render 'form', {accion: "Aceptar"} %>
-<%elsif @service.status ==2%>
+<%elsif @service.status ==2 or @service.status == 4%>
 	<h1>Editar Servicio</h1>
 	<%= render 'form', {accion: "Editar"} %>
 <%else%>
