--- a/app/views/comments/_formRequest.html.erb
+++ b/app/views/comments/_formRequest.html.erb
@@ -12,7 +12,7 @@
 	<% end %>
 
 	<div class="field">
-		<%= f.text_area :body, :class => 'form-control',:placeholder=>'Escriba acá su comentario respecto a esta solicitud...(entre 10 y 150 caracteres)', :id=>"eg-custom-toolbar", :required=>true %>
+		<%= f.text_area :body, :class => 'form-control',:placeholder=>'Escriba acá su comentario respecto a esta solicitud...(entre 10 y 150 caracteres)', :id=>"eg-custom-toolbar" %>
 	</div>
 	<div class="actions">
 		<%= f.submit "Enviar comentario", :class => 'btn btn-default btnCRUD' %>
@@ -22,6 +22,7 @@
 <script>
 	$(function() {
 		$('textarea#eg-custom-toolbar').editable({
+			theme: 'rease',
 			inlineMode: false,
 			language: 'es',
 			// Set custom buttons with separator between them.
