--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -69,7 +69,8 @@
 
 <script>
 	 $(function() {$('textarea#eg-basic').editable({
-      inlineMode: false,
+      theme: 'rease',
+		inlineMode: false,
       language: 'es'
     })
   });
