--- a/app/views/resources/_form.html.erb
+++ b/app/views/resources/_form.html.erb
@@ -40,7 +40,8 @@
 
 <script>
 	 $(function() {$('textarea#eg-basic').editable({
-      inlineMode: false,
+      	theme: 'rease',
+		inlineMode: false,
     })
   });
 </script>
