--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -43,7 +43,8 @@
 
 <script>
 	 $(function() {$('textarea#eg-basic').editable({
-      inlineMode: false,
+      theme: 'rease',
+		inlineMode: false,
       language: 'es'
     })
   });
