--- a/app/views/services/index_activos.html.erb
+++ b/app/views/services/index_activos.html.erb
@@ -36,6 +36,8 @@
 			</div>
 		</div>
 <%end%>
+
+<%= will_paginate @activos %>
 <script type="text/javascript">
 	$(function () {
 		$('[data-toggle="btnService"]').popover(
