--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,4 +1,4 @@
-<%if @service.status==1 and @service.status==3%>
+<%if @service.status==1 or @service.status==3%>
 	<h1><%= @service.title%></h1>
 	<div class="panel panel-default panelRease">
 		<div class="panel-heading">
