--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,9 @@
-<h1>Eventos </h1>
+<h1>Eventos <button type="button" class="btn btn-default btnWhite" id:"btnEvent" data-trigger="focus" data-container="body" data-toggle="btnEvent"> ? </button></h1>
+
 <% if user_signed_in? && current_user.category == 1  %>
 	<%= link_to 'Nuevo evento', new_event_path, :class => "btn btn-lg " %>
 <% end %>
-	<%= link_to 'Mostrar eventos', events_listado_path ,:class => "btn btn-lg " %>
+	<%= link_to 'Todos los eventos', events_listado_path ,:class => "btn btn-lg " %>
 
 <div class="buscador">
 	<%= form_tag(events_searchEvent_path, :method => "post",:class=>"form-inline") do %>
@@ -45,6 +46,15 @@
 
 		})
 	});
+	$(function () {
+		$('[data-toggle="btnEvent"]').popover(
+			{
+				title: 'Eventos',
+				html: 'true', 
+				content: '<p>Los <strong>Eventos</strong> son  actividades, reuniones y talleres a los que la red invita.</p><p>Solo aparecerán en el calendario los eventos disponibles.</p>',
+				template: '<div class="popover popover-rease"><div class="arrow"></div><div class="popover-inner"><h3 class="popover-title"></h3><div class="popover-content"><p></p></div></div></div>'
+			}
+		)
+	})
 </script>
-
 
