--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -20,10 +20,40 @@
 	<li id="off2" onclick="off2()"><a>Canceladas</a></li>
 	<li id="off3" onclick="off3()"><a>Caducadas</a></li>
 </ul>
+<div class="borderTab">
+	<div id="Disponible">
+		<%if @disponible.present?%>
+			<% @disponible.each do |offering| %>
+				<div class="panel panel-default panelRease">
+					<div class="panel-heading">
+						<%if offering.user == current_user %>
+							<i class="glyphicon glyphicon-tags"></i>
+						<%end%>
+						<%= offering.title %>
+					</div>
+					<div class="panel-body">
+						<h2>Resumen: </h2>
+						<p><%=raw offering.resume %></p>
+						<%= link_to "Ver oferta", offering %>
+					</div>
+				</div>
+			<%end%>
+			<%= will_paginate @disponible %>
+		<%else%>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Ofertas de servicios disponibles
+				</div>
+				<div class="panel-body">
+					<p>No hay ofertas de servicio disponibles</p>
+				</div>
+			</div>
+		<%end%>
 
-<div id="Disponible">
-	<%if @disponible.present?%>
-		<% @disponible.each do |offering| %>
+	</div>
+	<div id="Cancelada">
+		<%if @cancelada.present?%>
+		<% @cancelada.each do |offering| %>
 			<div class="panel panel-default panelRease">
 				<div class="panel-heading">
 					<%if offering.user == current_user %>
@@ -38,79 +68,47 @@
 				</div>
 			</div>
 		<%end%>
-		<%= will_paginate @disponible %>
-	<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Ofertas de servicios disponibles
+		<%else%>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Ofertas de servicios canceladas
+				</div>
+				<div class="panel-body">
+					<p>No hay ofertas de servicio canceladas</p>
+				</div>
 			</div>
-			<div class="panel-body">
-				<p>No hay ofertas de servicio disponibles
-			</div>
-		</div>
-	<%end%>
+		<%end%>
 
+	</div>
+	<div id="Caducada">
+		<%if @caducada.present?%>
+		<% @caducada.each do |offering| %>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					<%if offering.user == current_user %>
+						<i class="glyphicon glyphicon-tags"></i>
+					<%end%>
+					<%= offering.title %>
+				</div>
+				<div class="panel-body">
+					<h2>Resumen: </h2>
+					<p><%=raw offering.resume %></p>
+					<%= link_to "Ver oferta", offering %>
+				</div>
+			</div>
+		<%end%>
+		<%else%>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Ofertas de servicios caducadas
+				</div>
+				<div class="panel-body">
+					<p>No hay ofertas de servicio caducadas</p>
+				</div>
+			</div>
+		<%end%>
+	</div>
 </div>
-<div id="Cancelada">
-	<%if @cancelada.present?%>
-	<% @cancelada.each do |offering| %>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				<%if offering.user == current_user %>
-					<i class="glyphicon glyphicon-tags"></i>
-				<%end%>
-				<%= offering.title %>
-			</div>
-			<div class="panel-body">
-				<h2>Resumen: </h2>
-				<p><%=raw offering.resume %></p>
-				<%= link_to "Ver oferta", offering %>
-			</div>
-		</div>
-	<%end%>
-	<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Ofertas de servicios canceladas
-			</div>
-			<div class="panel-body">
-				<p>No hay ofertas de servicio canceladas
-			</div>
-		</div>
-	<%end%>
-
-</div>
-<div id="Caducada">
-	<%if @caducada.present?%>
-	<% @caducada.each do |offering| %>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				<%if offering.user == current_user %>
-					<i class="glyphicon glyphicon-tags"></i>
-				<%end%>
-				<%= offering.title %>
-			</div>
-			<div class="panel-body">
-				<h2>Resumen: </h2>
-				<p><%=raw offering.resume %></p>
-				<%= link_to "Ver oferta", offering %>
-			</div>
-		</div>
-	<%end%>
-	<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Ofertas de servicios caducadas
-			</div>
-			<div class="panel-body">
-				<p>No hay ofertas de servicio caducadas
-			</div>
-		</div>
-	<%end%>
-
-
-</div>
-
 <script type="text/javascript">
 	document.getElementById('Disponible').style.display='block';	
 	document.getElementById("off1").className = "active";	
@@ -141,7 +139,7 @@
 		document.getElementById("off2").className = "";
 		document.getElementById("off3").className = "active";
 	}
-	var content = '<p>Una <strong>oferta de servicio</strong> es el proceso previo para concretar una actividad AS, esta es publicada por un profesor y pretenden encontrar un socio comunitario con quien realizar dicha actividad. <p>A continuación se presenta el proceso completo de una actividad AS</p></p><div id = \"image"> <%= image_tag("Services.png",:class=>"popoverImage") %></div> <p><i class="glyphicon glyphicon-tags"></i> : Oferta de servicio que usted publicó.</p>';
+	var content = '<p>Una <strong>oferta de servicio</strong> es el proceso previo para concretar un proyecto AS, esta es publicada por un profesor y pretenden encontrar un socio comunitario con quien realizar dicho proyecto. <p>A continuación se presenta el proceso completo de un proyecto AS</p></p><div id = \"image"> <%= image_tag("Services.png",:class=>"popoverImage") %></div> <p><i class="glyphicon glyphicon-tags"></i> : Oferta de servicio que usted publicó.</p>';
 	$(function () {
 		$('[data-toggle="btnOferta"]').popover(
 			{
