--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -15,15 +15,48 @@
 	</div>
 	<%end%>
 </div>
-	<ul class="nav nav-tabs tabRease nav-justified">
+	
+
+
+<ul class="nav nav-tabs nav-justified tabRease">
 	<li id="req1" onclick="req1()"><a>Disponibles</a></li>
 	<li id="req2" onclick="req2()"><a>Canceladas</a></li>
 	<li id="req3" onclick="req3()"><a>Caducadas</a></li>
 </ul>
+<div class="borderTab">
+	<div id="Disponible">
+		<%if @disponible.present?%>
+			<% @disponible.each do |request| %>
+				<div class="panel panel-default panelRease">
+					<div class="panel-heading">
+						<%if request.user == current_user %>
+							<i class="glyphicon glyphicon-tags"></i>
+						<%end%>
+						<%= request.title %>
+					</div>
+					<div class="panel-body">
+						<h2>Resumen: </h2>
+						<p><%=raw request.resume %></p>
+						<%= link_to "Ver solicitud", request %>
+					</div>
+				</div>
+			<%end%>
+			<%= will_paginate @disponible %>
+		<%else%>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Ofertas de servicios disponibles
+				</div>
+				<div class="panel-body">
+					<p>No hay solicitudes de servicio disponibles</p>
+				</div>
+			</div>
+		<%end%>
 
-<div id="Disponible">
-	<%if @disponible.present?%>
-		<% @disponible.each do |request| %>
+	</div>
+	<div id="Cancelada">
+		<%if @cancelada.present?%>
+		<% @cancelada.each do |request| %>
 			<div class="panel panel-default panelRease">
 				<div class="panel-heading">
 					<%if request.user == current_user %>
@@ -38,79 +71,49 @@
 				</div>
 			</div>
 		<%end%>
-		<%= will_paginate @disponible %>
-	<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Ofertas de servicios disponibles
+		<%else%>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Ofertas de servicios canceladas
+				</div>
+				<div class="panel-body">
+					<p>No hay solicitudes de servicio canceladas</p>
+				</div>
 			</div>
-			<div class="panel-body">
-				<p>No hay solicitudes de servicio disponibles
-			</div>
-		</div>
-	<%end%>
+		<%end%>
 
+	</div>
+	<div id="Caducada">
+		<%if @caducada.present?%>
+		<% @caducada.each do |request| %>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					<%if request.user == current_user %>
+						<i class="glyphicon glyphicon-tags"></i>
+					<%end%>
+					<%= request.title %>
+				</div>
+				<div class="panel-body">
+					<h2>Resumen: </h2>
+					<p><%=raw request.resume %></p>
+					<%= link_to "Ver solicitud", request %>
+				</div>
+			</div>
+		<%end%>
+		<%else%>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Ofertas de servicios caducadas
+				</div>
+				<div class="panel-body">
+					<p>No hay solicitudes de servicio caducadas</p>
+				</div>
+			</div>
+		<%end%>
+
+
+	</div>
 </div>
-<div id="Cancelada">
-	<%if @cancelada.present?%>
-	<% @cancelada.each do |request| %>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				<%if request.user == current_user %>
-					<i class="glyphicon glyphicon-tags"></i>
-				<%end%>
-				<%= request.title %>
-			</div>
-			<div class="panel-body">
-				<h2>Resumen: </h2>
-				<p><%=raw request.resume %></p>
-				<%= link_to "Ver solicitud", request %>
-			</div>
-		</div>
-	<%end%>
-	<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Ofertas de servicios canceladas
-			</div>
-			<div class="panel-body">
-				<p>No hay solicitudes de servicio canceladas
-			</div>
-		</div>
-	<%end%>
-
-</div>
-<div id="Caducada">
-	<%if @caducada.present?%>
-	<% @caducada.each do |request| %>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				<%if request.user == current_user %>
-					<i class="glyphicon glyphicon-tags"></i>
-				<%end%>
-				<%= request.title %>
-			</div>
-			<div class="panel-body">
-				<h2>Resumen: </h2>
-				<p><%=raw request.resume %></p>
-				<%= link_to "Ver solicitud", request %>
-			</div>
-		</div>
-	<%end%>
-	<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Ofertas de servicios caducadas
-			</div>
-			<div class="panel-body">
-				<p>No hay solicitudes de servicio caducadas
-			</div>
-		</div>
-	<%end%>
-
-
-</div>
-
 <script type="text/javascript">
 	document.getElementById('Disponible').style.display='block';	
 	document.getElementById("req1").className = "active";	
@@ -141,7 +144,7 @@
 		document.getElementById("req2").className = "";
 		document.getElementById("req3").className = "active";
 	}
-	var content = '<p>Una <strong>solicitud de servicio</strong> es el proceso previo para concretar una actividad AS, esta es publicada por un socio comunitario y pretenden encontrar un profesor con quien realizar dicha actividad.</p><p>A continuación se presenta el proceso completo de una actividad AS</p></p><div id = \"image"> <%= image_tag("Services.png",:class=>"popoverImage") %></div><p><i class="glyphicon glyphicon-tags"></i> : Solicitud de servicio que usted publicó.</p>';
+	var content = '<p>Una <strong>solicitud de servicio</strong> es el proceso previo para concretar un proyecto AS, esta es publicada por un socio comunitario y pretenden encontrar un profesor con quien realizar dicho proyecto.</p><p>A continuación se presenta el proceso completo de un proyecto AS</p></p><div id = \"image"> <%= image_tag("Services.png",:class=>"popoverImage") %></div><p><i class="glyphicon glyphicon-tags"></i> : Solicitud de servicio que usted publicó.</p>';
 	$(function () {
 		$('[data-toggle="btnSolicitud"]').popover(
 			{
