--- a/app/views/services/index_activos.html.erb
+++ b/app/views/services/index_activos.html.erb
@@ -47,7 +47,8 @@
 			{
 				title: 'Servicios activos',
 				html: 'true', 
-				content: '<p><strong>Servicios activos:</strong> Son solicitudes u ofertas de servicio que ya han sido concretadas y tienen un profesor y un socio comunitario comprometidos en la realización de dicha actividad AS.</strong></p> <p><i class="glyphicon glyphicon-tags"></i> : Servicio activo en el cual usted participó.</p>'
+				content: '<p><strong>Servicios activos:</strong> Son solicitudes u ofertas de servicio que ya han sido concretadas y tienen un profesor y un socio comunitario comprometidos en la realización de dicho proyecto AS.</strong></p> <p><i class="glyphicon glyphicon-tags"></i> : Servicio activo en el cual usted participó.</p>',
+				template: '<div class="popover popover-rease"><div class="arrow"></div><div class="popover-inner"><h3 class="popover-title"></h3><div class="popover-content"><p></p></div></div></div>'
 			}
 		)
 	})
