--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Participación en el Servicio</h1>
+<h1>Manifestar interés de trabajo</h1>
 
-<%= render 'form',{accion: "Solicitar"} %>
+<%= render 'form',{accion: "Manifestar"} %>
 
