--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -70,13 +70,13 @@ aside
 body
 {
 	background: #ffffff;
-	background: -moz-linear-gradient(-45deg, #ffffff 0%, #ffffff 51%, #30aaaa 89%, #30aaaa 100%);
-	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#ffffff), color-stop(51%,#ffffff), color-stop(89%,#30aaaa), color-stop(100%,#30aaaa));
-	background: -webkit-linear-gradient(-45deg, #ffffff 0%,#ffffff 51%,#30aaaa 89%,#30aaaa 100%);
-	background: -o-linear-gradient(-45deg, #ffffff 0%,#ffffff 51%,#30aaaa 89%,#30aaaa 100%);
-	background: -ms-linear-gradient(-45deg, #ffffff 0%,#ffffff 51%,#30aaaa 89%,#30aaaa 100%);
-	background: linear-gradient(135deg, #ffffff 0%,#ffffff 51%,#30aaaa 89%,#30aaaa 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#30aaaa',GradientType=1 );
+	background: -moz-linear-gradient(-45deg,  #ffffff 65%, #30aaaa 100%, #bf6e4e 100%);
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(65%,#ffffff), color-stop(100%,#30aaaa), color-stop(100%,#bf6e4e));
+	background: -webkit-linear-gradient(-45deg,  #ffffff 65%,#30aaaa 100%,#bf6e4e 100%);
+	background: -o-linear-gradient(-45deg,  #ffffff 65%,#30aaaa 100%,#bf6e4e 100%);
+	background: -ms-linear-gradient(-45deg,  #ffffff 65%,#30aaaa 100%,#bf6e4e 100%);
+	background: linear-gradient(135deg,  #ffffff 65%,#30aaaa 100%,#bf6e4e 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#bf6e4e',GradientType=1 );
 	color: black;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-size: 14px;
@@ -139,6 +139,7 @@ p
 
 
 /*CLASES*/
+
 .breadcrumb
 {
 	text-align: left;
@@ -195,6 +196,11 @@ p
 	padding: 0;
 	margin: 0;
 }
+.no-margin
+{
+	margin-top: 0;
+	margin-bottom: 0;
+}
 .omniauthLogo
 {
 	max-height: 30px;
@@ -209,6 +215,7 @@ p
 {
 	max-width: 700px;
 	margin-left: 200px;
+	text-align: left;
 }
 .RoundPicture
 {
