--- a/app/views/bulletins/_form.html.erb
+++ b/app/views/bulletins/_form.html.erb
@@ -18,6 +18,12 @@
 				<%=f.label :description, "Descripción:"%>
 				<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic"%>
 			</p></div>
+
+			<div class="field"><p>
+			<%= f.label :receiver, "Destinatarios: "%>
+			<%= f.select(:receiver, [['Usuarios activos', 1],['Usuarios adherentes',2], ['Todos los usuarios',3]], {:include_blank => '-- Seleccione el tipo de usuario destinatario --' }, { :class => 'form-control', :required => true }) %></p>
+			</div>
+
 			<div class="field">
 				<p class="note">Fecha desde la que se enviará la información del sitio.</p>
 				<p><%= f.label :start_date, "A partir de: " %>
