--- a/app/views/events/listado.html.erb
+++ b/app/views/events/listado.html.erb
@@ -1,5 +1,7 @@
 <h1> Todos los eventos </h1>
-
+<% if user_signed_in? && current_user.category == 1  %>
+	<%= link_to 'Nuevo evento', new_event_path, :class => "btn btn-lg " %>
+<% end %>
 <%= link_to "Volver al calendario", events_path , :class => "btn btn-lg btnCRUD" %>
 <div class="buscador">
 	<%= form_tag(events_searchEvent_path, :method => "post",:class=>"form-inline") do %>
@@ -20,117 +22,117 @@
 <li id="event3" onclick="event3()"><a>Cancelado</a></li>
 <li id="event4" onclick="event4()"><a>Caducado</a></li>
 </ul>
-
-<div id ="Disponible">
-	<%if @disponibles.present?%>
-		<% @disponibles.each do |event| %>
+<div class="borderTab">
+	<div id ="Disponible">
+		<%if @disponibles.present?%>
+			<% @disponibles.each do |event| %>
+				<div class="panel  panel-default panelRease">
+					<div class="panel-heading">
+						<%=event.title%>
+					</div>
+					<div class="panel-body">
+						<h2>Información relevante</h2>
+						<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
+						<p><strong>Fecha y hora de inicio:</strong> <%=l event.start_time%></p>
+						<p><strong>Fecha y hora de término:</strong> <%=l event.end_time%></p>
+						<%= link_to "Ver evento", event%>
+					</div>
+				</div>
+			<%end%>
+			<%= will_paginate @disponibles, :param_name => 'disponibles' %>
+		<%else%>
 			<div class="panel  panel-default panelRease">
 				<div class="panel-heading">
-					<%=event.title%>
+					Eventos disponibles
 				</div>
 				<div class="panel-body">
-					<h2>Información relevante</h2>
-					<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
-					<p><strong>Fecha y hora de inicio:</strong> <%=event.start_time%></p>
-					<p><strong>Fecha y hora de término:</strong> <%=event.end_time%></p>
-					<%= link_to "Ver evento", event%>
+					<p>No hay eventos disponibles agendados.</p>
 				</div>
 			</div>
 		<%end%>
-		<%= will_paginate @disponibles, :param_name => 'disponibles' %>
-	<%else%>
-		<div class="panel  panel-default panelRease">
-			<div class="panel-heading">
-				Eventos disponibles
-			</div>
-			<div class="panel-body">
-				<p>No hay eventos disponibles agendados.</p>
-			</div>
-		</div>
-	<%end%>
-</div>
-<div id ="Realizado">
-	<%if @realizados.present?%>
-		<% @realizados.each do |event| %>
+	</div>
+	<div id ="Realizado">
+		<%if @realizados.present?%>
+			<% @realizados.each do |event| %>
+				<div class="panel  panel-default panelRease">
+					<div class="panel-heading">
+						<%=event.title%>
+					</div>
+					<div class="panel-body">
+						<h2>Información relevante</h2>
+						<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
+						<p><strong>Fecha y hora de inicio:</strong> <%=l event.start_time%></p>
+						<p><strong>Fecha y hora de término:</strong> <%=l event.end_time%></p>
+						<%= link_to "Ver evento", event%>
+					</div>
+				</div>
+			<%end%>
+		<%else%>
 			<div class="panel  panel-default panelRease">
 				<div class="panel-heading">
-					<%=event.title%>
+					Eventos realizados
 				</div>
 				<div class="panel-body">
-					<h2>Información relevante</h2>
-					<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
-					<p><strong>Fecha y hora de inicio:</strong> <%=event.start_time%></p>
-					<p><strong>Fecha y hora de término:</strong> <%=event.end_time%></p>
-					<%= link_to "Ver evento", event%>
+					<p>No hay eventos realizados agendados.</p>
 				</div>
 			</div>
 		<%end%>
-	<%else%>
-		<div class="panel  panel-default panelRease">
-			<div class="panel-heading">
-				Eventos realizados
-			</div>
-			<div class="panel-body">
-				<p>No hay eventos realizados agendados.</p>
-			</div>
-		</div>
-	<%end%>
-</div>
-<div id ="Cancelado">
-	<%if @cancelados.present?%>
-		<% @cancelados.each do |event| %>
+	</div>
+	<div id ="Cancelado">
+		<%if @cancelados.present?%>
+			<% @cancelados.each do |event| %>
+				<div class="panel  panel-default panelRease">
+					<div class="panel-heading">
+						<%=event.title%>
+					</div>
+					<div class="panel-body">
+						<h2>Información relevante</h2>
+						<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
+						<p><strong>Fecha y hora de inicio:</strong> <%=l event.start_time%></p>
+						<p><strong>Fecha y hora de término:</strong> <%=l event.end_time%></p>
+						<%= link_to "Ver evento", event%>
+					</div>
+				</div>
+			<%end%>
+		<%else%>
 			<div class="panel  panel-default panelRease">
 				<div class="panel-heading">
-					<%=event.title%>
+					Eventos cancelados
 				</div>
 				<div class="panel-body">
-					<h2>Información relevante</h2>
-					<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
-					<p><strong>Fecha y hora de inicio:</strong> <%=event.start_time%></p>
-					<p><strong>Fecha y hora de término:</strong> <%=event.end_time%></p>
-					<%= link_to "Ver evento", event%>
+					<p>No hay eventos cancelados agendados.</p>
 				</div>
 			</div>
 		<%end%>
-	<%else%>
-		<div class="panel  panel-default panelRease">
-			<div class="panel-heading">
-				Eventos cancelados
-			</div>
-			<div class="panel-body">
-				<p>No hay eventos cancelados agendados.</p>
-			</div>
-		</div>
-	<%end%>
-</div>
-<div id ="Caducado">
-	<%if @caducados.present?%>
-		<% @caducados.each do |event| %>
-			<div class="panel  panel-default panelRease">
+	</div>
+	<div id ="Caducado">
+		<%if @caducados.present?%>
+			<% @caducados.each do |event| %>
+				<div class="panel  panel-default panelRease">
+					<div class="panel-heading">
+						<%=event.title%>
+					</div>
+					<div class="panel-body">
+						<h2>Información relevante</h2>
+						<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
+						<p><strong>Fecha y hora de inicio:</strong> <%=l event.start_time%></p>
+						<p><strong>Fecha y hora de término:</strong> <%=l event.end_time%></p>
+						<%= link_to "Ver evento", event%>
+					</div>
+				</div>
+			<%end%>
+		<%else%>
+			<div class="panel panel-default panelRease">
 				<div class="panel-heading">
-					<%=event.title%>
+					Eventos caducados
 				</div>
 				<div class="panel-body">
-					<h2>Información relevante</h2>
-					<p><strong>Creado por:</strong> <%= link_to event.user.nickname, event.user%></p>
-					<p><strong>Fecha y hora de inicio:</strong> <%=event.start_time%></p>
-					<p><strong>Fecha y hora de término:</strong> <%=event.end_time%></p>
-					<%= link_to "Ver evento", event%>
+					<p>No hay eventos caducados agendados.</p>
 				</div>
 			</div>
 		<%end%>
-	<%else%>
-		<div class="panel panel-default panelRease">
-			<div class="panel-heading">
-				Eventos caducados
-			</div>
-			<div class="panel-body">
-				<p>No hay eventos caducados agendados.</p>
-			</div>
-		</div>
-	<%end%>
+	</div>
 </div>
-
 <script type="text/javascript">
 	document.getElementById('Disponible').style.display='block';  
 	document.getElementById("event1").className = "active"; 
