--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -14,23 +14,23 @@
 
 				<% if !user_signed_in? %>
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_aprendizaje_path) %>">
-					<%= link_to '¿Qué es AS? <i class="glyphicon glyphicon-pencil"></i>'.html_safe, presentation_aprendizaje_path %>
+					<%= link_to '¿Qué es AS?', presentation_aprendizaje_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_hacemos_path) %>">
-					<%= link_to '¿Qué hacemos? <i class="glyphicon glyphicon-paperclip"></i>'.html_safe, presentation_hacemos_path %>
+					<%= link_to '¿Qué hacemos?', presentation_hacemos_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_somos_path) %>">
-					<%= link_to '¿Quiénes somos? <i class="glyphicon glyphicon-pushpin"></i>'.html_safe, presentation_somos_path %>
+					<%= link_to '¿Quiénes somos?', presentation_somos_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_estatuto_path) %>">
-					<%= link_to 'Estatuto <i class="glyphicon glyphicon-book"></i>'.html_safe, presentation_estatuto_path %>
+					<%= link_to 'Estatuto', presentation_estatuto_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(contacts_path) %>">
-					<%= link_to 'Contacto <i class="glyphicon glyphicon-envelope"></i>'.html_safe, contacts_path %>
+					<%= link_to 'Contacto', contacts_path %>
 				</li>
 				<li role="presentation" class="navCenter">
 					<%= form_tag(presentation_searchPage_path, :method => "post",:class=>"form-inline") do %>	
@@ -48,27 +48,27 @@
 				<%else%>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_estatuto_path) %>">
-					<%= link_to 'Estatuto <i class="glyphicon glyphicon-book"></i>'.html_safe, presentation_estatuto_path %>
+					<%= link_to 'Estatuto', presentation_estatuto_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(requests_path) %>">
-					<%= link_to 'Solicitudes <i class="glyphicon glyphicon-log-in"></i>'.html_safe, requests_path %>
+					<%= link_to 'Solicitudes', requests_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(offerings_path) %>">
-					<%= link_to 'Ofertas <i class="glyphicon glyphicon-log-out"></i>'.html_safe, offerings_path %>
+					<%= link_to 'Ofertas', offerings_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(services_index_activos_path) %>">
-					<%= link_to 'Servicios <i class="glyphicon glyphicon-check"></i>'.html_safe, services_index_activos_path %>
+					<%= link_to 'Servicios', services_index_activos_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(experiences_path) %>">
-					<%= link_to 'Experiencias <i class="glyphicon glyphicon-education"></i>'.html_safe, experiences_path %>
+					<%= link_to 'Experiencias', experiences_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(events_path) %>">
-					<%= link_to 'Eventos <i class="glyphicon glyphicon-calendar"></i>'.html_safe, events_path %>
+					<%= link_to 'Eventos', events_path %>
 				</li>
 
 				<li role="presentation" class="navCenter">
