--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,4 +1,15 @@
 <h1>Detalles de la solicitud de servicio</h1>
+
+<% if user_signed_in? && current_user.category != 2 %>
+	<% if @request.user.id == current_user.id %>
+		<%if @request.status != 4%>
+			<%= link_to 'Editar ', edit_request_path(@request), :class => "btn btn-lg btnCRUD" %>
+			<%= link_to 'Eliminar', @request, method: :delete, data: { confirm: '¿Está seguro de eliminar la solicitud?' }, :class => "btn btn-lg btnCRUD" %>
+		<%end%>
+	<% end %>
+<% end %>
+
+<%= link_to 'Volver', requests_path, :class => "btn btn-lg btnCRUD" %>
 <div class="panel panel-default panelRease" >
 	<div class="panel-heading">
 		<%= @request.title %>
@@ -18,14 +29,14 @@
 			<% elsif @request.status == 3%>
 				Caducado
 			<% elsif @request.status == 4%>
-				Aceptado
+				Aceptado para servicio
 			<%end%>
 		</p>
 
 
-		<p><strong>Fecha de inicio: </strong><%=l @request.start_time %></p>
+		<p><strong>Fecha de licitación de inicio: </strong><%=l @request.start_time %></p>
 
-		<p><strong>Fecha de término: </strong><%=l @request.end_time %></p>
+		<p><strong>Fecha de licitación de término: </strong><%=l @request.end_time %></p>
 		<%if @request.area_id.present?%>
 			<p><strong>Área de trabajo: </strong> <%= @request.area.name%></p>
 		<%end%>
@@ -44,21 +55,21 @@
 		<%end %>
 		<p>
 
-		<h2>Peticiones de Servicio</h2>
+		<h2>Manifestaciones</h2>
 		<% if @aceptados.blank?%>
 			<%if @request.services.count == 0%>
-				<p>Aún no se han generado peticiones para participar en este servicio</p>
+				<p>Aún no se han manifestado para participar en este servicio</p>
 			<%elsif @request.services.count == 1%>
-				<p>Se ha generado <strong>1</strong> peticiones de servicio</p>
+				<p>Se ha manifestado <strong>1</strong> persona para este proyecto</p>
 				<%= link_to "Ver peticiones", request_services_path(@request), :class=>'btn btnCRUD'%>
 			<%else%>
-				<p>Se han generado <strong><%=@request.services.count%></strong> peticiones de servicio</p>
+				<p>Se han manifestado <strong><%=@request.services.count%></strong> personas para este proyecto</p>
 				<%= link_to "Ver peticiones", request_services_path(@request), :class=>'btn btnCRUD'%>
 			<%end%>
 
 			<% if @request.user != current_user and current_user.category == 2%>
 				<%if @petition.blank?%>
-					<%= link_to "Solicitar participación", new_request_service_path(@request), :class=>'btn btnCRUD'%>
+					<%= link_to "Manifestar interés de trabajo", new_request_service_path(@request), :class=>'btn btnCRUD'%>
 				<%end%>
 			<%end%>
 			
@@ -70,6 +81,13 @@
 	</div>
 	<div class="panel-footer">
 		<h2>Comentarios</h2>
+		<%if @request.comments.count == 0%>
+			<p>¡<%= current_user.nickname%>, sé el primero en comentar esta solicitud!</p>
+		<%elsif @request.comments.count == 1%>
+			<p>Hay <strong>1</strong> comentario en esta solicitud.</p>
+		<%else%>
+			<p>Hay un total de <strong><%= @request.comments.count%></strong> comentarios en esta solicitud.</p>
+		<%end%>
 		<div class="comment">
 			<%if user_signed_in? %>
 				<%=render 'comments/formRequest'%>
@@ -94,11 +112,3 @@
 	</div>
 </div>
 
-<% if user_signed_in? && current_user.category != 2 %>
-	<% if @request.user.id == current_user.id %>
-		<%= link_to 'Editar ', edit_request_path(@request), :class => "btn btn-lg btnCRUD" %>
-		<%= link_to 'Eliminar', @request, method: :delete, data: { confirm: '¿Está seguro de eliminar la solicitud?' }, :class => "btn btn-lg btnCRUD" %>
-	<% end %>
-<% end %>
-
-<%= link_to 'Volver', requests_path, :class => "btn btn-lg btnCRUD" %>
